--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -15,21 +15,21 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 #
-AM_CFLAGS = -D_ANSC_LINUX
-AM_CFLAGS += -D_ANSC_USER
+AM_CFLAGS =
 
-AM_CPPFLAGS = -Wall -g -Werror
 AM_CXXFLAGS = -std=c++11
 
 ACLOCAL_AMFLAGS = -I m4
+
 bin_PROGRAMS = libnet_gtest.bin
+
 libnet_gtest_bin_CPPFLAGS = -I$(PKG_CONFIG_SYSROOT_DIR)$(includedir)/gtest \
-                                        -I${top_srcdir}/gtest/include \
-                                        -I${top_srcdir}/source \
-                                        -I${top_srcdir}/source/include \
-                                        -I$(PKG_CONFIG_SYSROOT_DIR)$(includedir)/dbus-1.0 \
-                                        -I$(PKG_CONFIG_SYSROOT_DIR)$(libdir)/dbus-1.0/include \
-                                        -I$(PKG_CONFIG_SYSROOT_DIR)$(includedir)/ccsp
+                            -I${top_srcdir}/gtest/include \
+                            -I${top_srcdir}/source \
+                            -I${top_srcdir}/source/include \
+                            -I$(PKG_CONFIG_SYSROOT_DIR)$(includedir)/dbus-1.0 \
+                            -I$(PKG_CONFIG_SYSROOT_DIR)$(libdir)/dbus-1.0/include \
+                            -I$(PKG_CONFIG_SYSROOT_DIR)$(includedir)/ccsp
 
 libnet_gtest_bin_SOURCES = libnet_test.cpp gtest_main.cpp TestEnvironment.hpp TestUtils.cpp TestUtils.hpp
 libnet_gtest_bin_LDFLAGS = -lgtest -lgmock -lgcov -pthread
