RDKCOM-3639: RDKBDEV-1590: control gtest support via configure option
Reason for change:
control gtest support via configure option
Previously enabled by default, but add a configure option and disable
by default to align with other RDKB components.
autotools cleanup and install libnet.h
Test Procedure: Sanity.
Risks: None.
Signed-off-by: Andre McCurdy <armccurdy@gmail.com>
Change-id: Ie23aaf07334c0ec3ff67a2e8ab2e6a64d6b395af
(cherry picked from commit f552ac2f952106b2ee1dfa8aeef51dd4d1215c78)

--- a/Makefile.am
+++ b/Makefile.am
@@ -15,4 +15,9 @@
 #
 # SPDX-License-Identifier: Apache-2.0
 #
-SUBDIRS = source test
+
+SUBDIRS = source
+
+if WITH_GTEST_SUPPORT
+SUBDIRS += test
+endif
