--- a/configure.ac
+++ b/configure.ac
@@ -25,6 +25,22 @@ AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([cfg])
 AM_INIT_AUTOMAKE([subdir-objects foreign no-dist-gzip dist-bzip2 1.9])
 
+GTEST_ENABLE_FLAG = ""
+
+AC_ARG_ENABLE([gtestapp],
+             AS_HELP_STRING([--enable-gtestapp],[enable Gtest support (default is no)]),
+             [
+               case "${enableval}" in
+                yes) GTEST_SUPPORT_ENABLED=true
+                     GTEST_ENABLE_FLAG="-DGTEST_ENABLE"
+                     m4_if(m4_sysval,[0],[AC_CONFIG_FILES([source/test/Makefile])]);;
+                no) GTEST_SUPPORT_ENABLED=false AC_MSG_ERROR([Gtest support is disabled]);;
+                 *) AC_MSG_ERROR([bad value ${enableval} for --enable-gtestapp ]);;
+               esac
+             ],
+             [echo "Gtestapp is disabled"])
+AM_CONDITIONAL([WITH_GTEST_SUPPORT], [test x$GTEST_SUPPORT_ENABLED = xtrue])
+
 LT_INIT([enable-shared])
 AC_LANG([C++])
 
@@ -59,5 +75,7 @@ AC_CHECK_HEADERS([stdlib.h unistd.h])
 
 AC_CONFIG_FILES([Makefile
 		source/Makefile])
+
+AC_SUBST(GTEST_ENABLE_FLAG)
 
 AC_OUTPUT
